Fix view jumping on week dropdown usage.

--- a/visualization-app/src/stylesheets/dropdown.css
+++ b/visualization-app/src/stylesheets/dropdown.css
@@ -1,6 +1,6 @@
 
 .dropdown-menu {
-  margin: 0 4vh;
+  margin: 0 2vw;
 }
 
 .dropdown {
